# new_summarizer_sentiment

./: .gitignore  README.md  activity_history.json  app.py  pyproject.toml  requirements.txt  sample_article.py  utils.py
